--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="row">
         <div class="col-5"></div>
-        <div class="col-2 offset-5 "></div>
+        <div class="col-2 offset-5 col-sm-5 offset-sm-2"></div>
     </div>
   </header>
 
@@ -38,12 +38,12 @@
     <!-- img portfolio -->
     <div>
         <div class="row">
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
-            <div class="col-12"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
+            <div class="col-12 col-sm-6 col-lg-4"></div>
         </div>
     </div>
 
@@ -53,8 +53,8 @@
             <div class="col-12"></div>
         </div>
         <div class="row">
-            <div class="col-12"></div>
-            <div class="col-12"></div>
+            <div class="col-12 col-sm-6"></div>
+            <div class="col-12 col-sm-6"></div>
         </div>
         <div class="row">
             <div class="col-12"></div>
@@ -72,9 +72,9 @@
   <!-- footer  -->
   <div class="container">
       <div class="row" >
-          <div class="col-12"></div>
-          <div class="col-12"></div>
-          <div class="col-12"></div>
+          <div class="col-12 col-sm-4"></div>
+          <div class="col-12 col-sm-4"></div>
+          <div class="col-12 col-sm-4"></div>
       </div>
       <div class="row">
           <div class="col-12"></div>
