--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
         </div>
 
     <!-- img portfolio -->
-
-        <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4"></div>
-            <div class="col-12 col-sm-6 col-lg-4"></div>
-            <div class="col-12 col-sm-6 col-lg-4"></div>
-            <div class="col-12 col-sm-6 col-lg-4"></div>
-            <div class="col-12 col-sm-6 col-lg-4"></div>
-            <div class="col-12 col-sm-6 col-lg-4"></div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3"> 
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col"></div>
         </div>
     </div>
-    
+
     <!-- parte verde  -->
     <div class="container">
         <div class="row">
