--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>freelancer</title>
@@ -19,10 +20,21 @@
   </header>
 
   <!-- jumbotron -->
-  <section>
+  <section id="jumbotron">
     <div class="container">
         <div class="row">
-            <div id="jumbo" class="col-12"></div>
+            <div class="col-12">
+                <div id="jumbo">
+                    <img src="img/avatar.svg" alt="">
+                    <h1 class="h1">START BOOTSRTAP</h1>
+                    <div class="line-star-white"> 
+                        <div></div>
+                        <i class="fas fa-star"></i>
+                        <div></div>
+                    </div>
+                    <h6 class="h6">GRAPICH ARTIST - WEB DESIGNER - ILLUSTRATOR</h4> 
+                </div>     
+            </div>
         </div>
     </div>
   </section>
@@ -31,17 +43,52 @@
     <!-- portfolio -->
     <div class="container">
         <div class="row">
-            <div class="col-12"></div>  
+            <div class="col-12">
+                <div id="start-portfolio">
+                    <h4 class="h4">PORTFOLIO</h4>
+                    <div class="line-star-blu"> 
+                        <div></div>
+                        <i class="fas fa-star"></i>
+                        <div></div>
+                    </div>
+                </div>
+                
+            </div>  
         </div>
 
     <!-- img portfolio -->
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3"> 
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3"> 
+            <div class="col">
+                <div class="sfondo">
+                    <img src="img/cabin.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="sfondo">
+                    <img src="img/cake.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="sfondo" >
+                    <img src="img/circus.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="sfondo">
+                    <img src="img/game.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="sfondo">
+                    <img src="img/safe.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="sfondo">
+                    <img src="img/submarine.png" alt="">
+                </div>
+            </div>
+            
         </div>
     </div>
 
@@ -51,8 +98,8 @@
             <div class="col-12"></div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-6"></div>
-            <div class="col-12 col-sm-6"></div>
+            <div class="col-12 col-md-6"></div>
+            <div class="col-12 col-md-6"></div>
         </div>
         <div class="row">
             <div class="col-12"></div>
@@ -70,9 +117,9 @@
   <!-- footer  -->
   <div class="container">
       <div class="row" >
-          <div class="col-12 col-sm-4"></div>
-          <div class="col-12 col-sm-4"></div>
-          <div class="col-12 col-sm-4"></div>
+          <div class="col-12 col-md-4"></div>
+          <div class="col-12 col-md-4"></div>
+          <div class="col-12 col-md-4"></div>
       </div>
       <div class="row">
           <div class="col-12"></div>
