--- a/index.html
+++ b/index.html
@@ -93,18 +93,32 @@
     </div>
 
     <!-- parte verde  -->
-    <div class="container">
-        <div class="row">
-            <div class="col-12"></div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-6"></div>
-            <div class="col-12 col-md-6"></div>
-        </div>
-        <div class="row">
-            <div class="col-12"></div>
+    <div class="text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div id="start-about">
+                        <h4 class="h4">ABOUT</h4>
+                        <div class="line-star-white"> 
+                            <div></div>
+                            <i class="fas fa-star"></i>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6"><p class="p-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas minus, delectus, magnam neque maiores numquam ipsum odit nisi nesciunt voluptatum quae ducimus! Deleniti optio minima at assumenda temporibus architecto? Pariatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad odit nobis quam atque maxime. Vel reprehenderit est quia corporis itaque, quos reiciendis delectus rerum incidunt quas, quidem distinctio, voluptatibus nulla.</p></div>
+                <div class="col-12 col-md-6"><p class="p-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum vero possimus, officia excepturi labore, velit iure modi consequuntur eaque exercitationem alias distinctio commodi cumque consequatur accusantium? Ipsam, quo. Totam, alias? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus sint quia doloremque sunt, aliquam veniam quod qui molestias voluptatem reprehenderit alias beatae fuga sit nobis pariatur veritatis perferendis rem deleniti!</p></div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div id="btn-download"><i class="fas fa-download"></i></i> Download</div>
+                </div>
+            </div>
         </div>
     </div>
+    
 
     <!-- colona bianca -->
     <div class="container">
