navigatore fatto, da ottimizzare

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">START BOOTSTRAP</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#h4-portfolio">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#h4-about">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dropdown link</a>
+                <a class="nav-link" href="#h4-contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="start-portfolio">
-                    <h4 class="h4">PORTFOLIO</h4>
+                    <h4 class="h4" id="h4-portfolio">PORTFOLIO</h4>
                     <div class="line-star-blu"> 
                         <div></div>
                         <i class="fas fa-star"></i>
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-12">
                     <div id="start-about">
-                        <h4 class="h4">ABOUT</h4>
+                        <h4 class="h4" id="h4-about">ABOUT</h4>
                         <div class="line-star-white"> 
                             <div></div>
                             <i class="fas fa-star"></i>
@@ -142,7 +142,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="start-portfolio">
-                    <h4 class="h4">CONTACT ME</h4>
+                    <h4 class="h4" id="h4-contact">CONTACT ME</h4>
                     <div class="line-star-blu"> 
                         <div></div>
                         <i class="fas fa-star"></i>
