da perfezionare ma finito

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div id="start-portfolio">
+                <div id="start-sezione">
                     <h4 class="h4" id="h4-portfolio">PORTFOLIO</h4>
                     <div class="line-star-blu"> 
                         <div></div>
@@ -141,7 +141,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div id="start-portfolio">
+                <div id="start-sezione">
                     <h4 class="h4" id="h4-contact">CONTACT ME</h4>
                     <div class="line-star-blu"> 
                         <div></div>
@@ -149,6 +149,23 @@
                         <div></div>
                     </div>
                 </div>
+
+                <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingInput" placeholder="pino santi">
+                    <label for="floatingInput">Name</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email Address</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="phone" class="form-control" id="floatingInput" placeholder="n...">
+                    <label for="floatingInput">Phone Number</label>
+                  </div>
+                  <div class="form-floating mb3">
+                    <input type="message" class="form-control" id="floatingInput" placeholder="text">
+                    <label for="floatingInput">Message</label>
+                  </div>
             </div>
         </div>
     </div>
