--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                     <input type="phone" class="form-control" id="floatingInput" placeholder="n...">
                     <label for="floatingInput">Phone Number</label>
                   </div>
-                  <div class="form-floating mb3">
-                    <input type="message" class="form-control" id="floatingInput" placeholder="text">
-                    <label for="floatingInput">Message</label>
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Message</label>
                   </div>
             </div>
         </div>
