--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               
     <div id="sfondo-footer-down" class="row" >
         <div class="col-12">
-            <div id="copyr">Copyright your website 2019</div>
+            <div id="copyr">Copyright <i class="far fa-copyright"></i> your website 2019</div>
         </div>
     </div>
   </footer>
