--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                         <div></div>
                         <i class="fas fa-star"></i>
                         <div></div>
-                    </div>
-                </div>
-                
+                    </di v>
+                </div>\
             </div>  
         </div>
 
